<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateFragment">

    <TextView
        android:id="@+id/update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/screen_label_regular_margin"
        android:layout_marginTop="@dimen/screen_label_regular_margin"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/update_note"
        android:textColor="@color/black"
        android:textSize="@dimen/screen_label_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_name_edit_text"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_body_edit_text"
        android:layout_width="match_parent"
        android:hint="@string/body"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        app:layout_constraintEnd_toEndOf="@id/note_name_edit_text"
        app:layout_constraintStart_toStartOf="@id/note_name_edit_text"
        app:layout_constraintTop_toBottomOf="@id/note_name_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regular_margin"
        android:background="@drawable/outlined_update_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/update"
        android:textColor="#0ACFFE"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>