<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteViewFragment">

    <androidx.appcompat.widget.ActionMenuView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/note_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/screen_label_regular_margin"
        android:layout_marginTop="@dimen/screen_label_regular_margin"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/note_view"
        android:textColor="@color/black"
        android:textSize="@dimen/screen_label_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:fontFamily="@font/montserrat_medium"
        android:text="sometext"
        android:textColor="@color/dark_pink_gray"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@id/note_view_label"
        app:layout_constraintTop_toBottomOf="@id/note_view_label" />

    <TextView
        android:id="@+id/note_body_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:fontFamily="@font/montserrat_regular"
        android:text="sometext"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/note_name_view"
        app:layout_constraintTop_toBottomOf="@id/note_name_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regular_margin"
        android:background="@drawable/outlined_update_button"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/update"
        android:textColor="#0ACFFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regular_margin"
        android:background="@drawable/outlined_delete_button"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="20dp"
        android:text="@string/delete"
        android:textColor="#ED2121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/go_to_update" />

</androidx.constraintlayout.widget.ConstraintLayout>